# omnibase_core

./: !!!MVP_PLAN_CORE_LIBRARY_REQUIREMENTS!!!.md  .duplicate-id-registries.yaml  .gitignore  .import_validation_cache.json  .importlinter  .markdown-link-check.json  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .secrets.baseline  .semgrepignore  .stub-check-config.example.yaml  .tmp_omn14401_planted_violation.yaml  .yaml-validation-allowlist.yaml  .yamlfmt  ACTIONABLE_FIXES.md  ADVANCED_DOCS_VALIDATION_REPORT.md  AGENT.md  AGENT39_COVERAGE_REPORT.md  AGENTS.md  AGENT_19_COVERAGE_REPORT.md  AGENT_1_VALIDATION_MODELS_COVERAGE_REPORT.md  AGENT_20_COVERAGE_REPORT.md  AGENT_21_COVERAGE_REPORT.md  AGENT_2_MIGRATION_COVERAGE_REPORT.md  AGENT_2_QUICK_SUMMARY.txt  AGENT_36_CLI_COVERAGE_REPORT.md  AGENT_38_BRANCH_COVERAGE_REPORT.md  AGENT_43_COVERAGE_REPORT.md  AGENT_43_SUMMARY.txt  AGENT_46_SECURITY_CONFIG_BRANCH_COVERAGE_REPORT.md  AGENT_47_WORKFLOW_COVERAGE_REPORT.md  AGENT_48_COVERAGE_REPORT.md  AGENT_49_COMPLETION_REPORT.md  AGENT_4_CONFIG_MODELS_NAMING_REPORT.md  AGENT_4_WORKFLOW_COVERAGE_REPORT.md  AGENT_54_INTEGRATION_TESTING_REPORT.md  AGENT_5_COVERAGE_REPORT.md  AGENT_6_COVERAGE_REPORT.md  AGENT_7_8_QUICK_START.md  (+350 more)
.backup_20251022_085659/: emit.py.bak  mixin_event_driven_node.py.bak  mixin_event_listener.py.bak  mixin_node_lifecycle.py.bak  mixin_redaction.py.bak  mixin_workflow_support.py.bak  model_action_metadata.py.bak  model_action_payload_types.py.bak
.claude/: architecture-handshake.md  settings.local.json
.github/: CODEOWNERS  dependabot.yml  propagation-targets.yaml  required-checks.yaml
.hive-mind/: hive.db  hive.db-shm  hive.db-wal
.onex/: aislop-rules.yaml
.onex_state/: consumer-graph.json
.pre-commit-hooks/: check-evidence-shape.sh  reject-required-check-skip-vector.sh
.serena/: project.yml
.swarm/: memory.db-shm  memory.db-wal
architecture-handshakes/: README.md  _parse_repos_conf.sh  check-handshake.sh  check-policy-gate.sh  gitignore-baseline.yaml  install.sh  pull-request-workflow-budget.yaml  repos.conf  standalone-validator-debt.yaml  validator-requirements-baseline.yaml  validator-requirements.yaml
archived/: FUTURE_NODE_MIGRATION_PLAN.md  test_contract_fix.py
contracts/: OMN-10066.yaml  OMN-10211.yaml  OMN-10212.yaml  OMN-10213.yaml  OMN-10215.yaml  OMN-10217.yaml  OMN-10219.yaml  OMN-10244.yaml  OMN-10278.yaml  OMN-10348.yaml  OMN-10512.yaml  OMN-10720.yaml  OMN-10733.yaml  OMN-10824.yaml  OMN-10835.yaml  OMN-11139.yaml  OMN-11209.yaml  OMN-12663.yaml  OMN-13130.yaml  OMN-13132.yaml  OMN-13234.yaml  OMN-13300.yaml  OMN-13530.yaml  OMN-13542.yaml  OMN-13703.yaml  OMN-13705.yaml  OMN-604.yaml  OMN-9260.yaml  OMN-9572.yaml  OMN-9574.yaml  OMN-9592.yaml  OMN-9601.yaml  OMN-9614.yaml  OMN-9623.yaml  OMN-9624.yaml  OMN-9637.yaml  OMN-9770.yaml  OMN-9771.yaml  OMN-9877.yaml  README.md
docs/: API_DOCUMENTATION.md  ARCHITECTURE_EVOLUTION_OVERVIEW.md  CIRCULAR_DEPENDENCY_ANALYSIS_REPORT.md  CODE_QUALITY_ANALYSIS_DICT_ANY_MIGRATION.md  DECLARATIVE_EFFECT_NODES_IMPLEMENTATION_PLAN.md  DEPENDENCY_REFACTORING_PLAN.md  DOCSTRING_TEMPLATES.md  DOCUMENTATION_ARCHITECTURE.md  ERROR_HANDLING_BEST_PRACTICES.md  INDEX.md  MINIMAL_RUNTIME_PHASED_PLAN.md  MIXIN_MIGRATION_PLAN.md  MODEL_CONFLICT_RESOLUTION.md  MVP_PLAN.md  MVP_PROPOSED_WORK_ISSUES.md  NAMING_CONVENTION_ANALYSIS.md  NODES_API_COMPATIBILITY.md  NODES_DOMAIN_ARCHITECTURE.md  NODES_DOMAIN_MIGRATION_GUIDE.md  NODES_INTEGRATION_EXAMPLES.md  NODE_RESTORATION_SUMMARY.md  ONEX_4_Node_System_Developer_Guide.md  ONEX_FOUR_NODE_ARCHITECTURE.md  PLANTED_VIOLATION_OMN13572.md  PR59_FOLLOWUP_PLAN.md  RELEASE_NOTES_v0.1.0.md  SUBCONTRACT_ARCHITECTURE.md  THREADING.md  TYPEDDICT_CONSOLIDATION.md  V040_HANDOFF.md  VALIDATION_ENHANCEMENT_PLAN.md  VALIDATION_PROTOCOL_COMPLIANCE.md  archetype-mapping-analysis.md  circuit_breaker_pattern.md  diagnosis-ci-duration-2026-04-21.md  downstream-repos.yaml  field_accessor_migration_guide.md  field_accessor_pattern_summary.md  four_node_archetype_analysis.md  naming-convention-analysis.md  (+2 more)
examples/: README.md  __init__.py  contract_validator_usage.py  field_accessor_migration.py  field_accessor_migration.py.bak  mixin_discovery_usage.py  practical_migration_example.py  validation_usage_example.py
knowledge/: knowledge_storage_index.json  onex_mixin_architecture_patterns.md
memory/: claude-flow-data.json  memory-store.json
onex/: README.md  run_onex.sh
python/: __init__.py
scripts/: PROTOCOL_IMPLEMENTATION_REPORT.md  README.md  README_PYDANTIC_FIXERS.md  TYPE_SAFETY_README.md  add_missing_imports.py  add_modelonexerror_import.py  analyze-to-dict-methods.py  analyze_exception_handling.py  analyze_exception_handling.py.bak  analyze_multi_enum_files.py  analyze_multi_enum_files.py.bak  analyze_mypy_errors.py  analyze_name_errors.py  analyze_name_errors.py.bak  analyze_pydantic_errors.py  apply_fixer_to_models.sh  audit_naming_conventions.py  audit_naming_conventions.py.bak  auto_fix_type_annotations.py  batch_fix_all_models.py.bak  batch_fix_name_errors.py  batch_fix_string_versions.sh  check_circular_deps.py  check_db_ownership.py  check_forbidden_patterns.sh  check_hook_bits_drift.py  check_no_env_files.sh  check_no_untyped_metadata.py  check_node_purity.py  check_protocol_exports.py  check_release_identity.py  check_transport_imports.py  cleanup.py  comprehensive_arg_type_fix.py  comprehensive_arg_type_fix.py.bak  compute_contract_fingerprint.py  emit_ts_types.py  execute_duplicate_resolution.sh  fix-import-patterns.py  fix-imports.py  (+131 more)
test_split_results/: split_1_output.txt  split_2_output.txt  split_3_output.txt  split_4_output.txt  split_5_output.txt
tests/: __init__.py  comparison_schema_value_runtime_validation.py  conftest.py  conftest.py.bak  pytest.ini  simple_performance_test.py  standalone_runtime_validation_comparison.py  standalone_runtime_validation_comparison.py.bak  test_circuit_breaker.py  test_contract_optimization.py  test_db_ownership_subcontract.py  test_direct_instantiation_danger.py  test_environment_config.py  (+6 more)
(+11629 files in other folders)
