# SPDX-FileCopyrightText: 2025 OmniNode.ai Inc.
# SPDX-License-Identifier: MIT

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnibase_core"
version = "0.46.8"
description = "ONEX Core Framework - Base classes and essential implementations"
authors = [
    {name = "OmniNode.ai", email = "contact@omninode.ai"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = [
    "onex",
    "framework",
    "architecture",
    "dependency-injection",
    "base-classes",
    "infrastructure",
    "event-driven",
    "error-handling",
    "node-architecture"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
dependencies = [
    "pydantic>=2.12.5,<3.0.0",
    "pyyaml>=6.0.2,<7.0.0",
    "dependency-injector>=4.48.3,<5.0.0",
    "deepdiff>=8.0.0,<10.0.0",
    "click>=8.3.1,<9.0.0",
    "cryptography>=46.0.3,<50.0.0",
    "jsonschema>=4.25.1,<5.0.0",
    "httpx>=0.27.0,<1.0.0",
    "blake3>=1.0.8,<2.0.0",
    "ruamel-yaml>=0.18.0",
    "tree-sitter>=0.25.2,<0.27",
    "tree-sitter-python>=0.25.0,<0.26",
]

[project.urls]
Homepage = "https://github.com/OmniNode-ai/omnibase_core"
Repository = "https://github.com/OmniNode-ai/omnibase_core"
Documentation = "https://github.com/OmniNode-ai/omnibase_core/tree/main/docs"

[project.scripts]
onex = "omnibase_core.cli.cli_commands:cli"
# Backward-compatibility alias (renamed from 'omni-agent' to 'onex' in v0.3.0)
omni-agent = "omnibase_core.cli.cli_commands:cli"
# Dev/test runtime host CLI (Phase 1 MVP - LocalHandler only)
# WARNING: For development and testing ONLY, not for production use
omninode-runtime-host-dev = "omnibase_core.cli.cli_runtime_host:main"
check-local-paths = "omnibase_core.validation.validator_local_paths:main"
check-github-token-env-reads = "omnibase_core.validation.validator_github_token_env_reads:main"
# OMN-13293 (G1): the same local-paths check executed as a COMPUTE node over the
# in-memory event bus (two-transport seam; Kafka backend in CI). Proven
# equivalent to check-local-paths on the G1 corpus + 6999-file shadow-bake.
check-local-paths-compute = "omnibase_core.validation.local_paths.runtime_local_paths:main"
# OMN-13294 (G2): hardcoded private-IP (RFC1918) scanner, same COMPUTE/bus seam.
# Generated by node_generation_consumer and corpus-accepted.
check-private-ip-compute = "omnibase_core.validation.private_ip.runtime_private_ip:main"
# OMN-13497: no-faked-boundary scanner (bans hand-written fakes/stubs of the
# inference/routing/dispatch boundary), same COMPUTE/bus seam. Generated by
# node_generation_consumer and corpus-accepted. Lands report-only.
check-no-faked-boundary = "omnibase_core.validation.no_faked_boundary.runtime_no_faked_boundary:main"
# OMN-13480 (G2, SEA-dogfood): the TODO-marker scanner names its own subject tokens here.  # onex-allow-todo-marker OMN-13480 reason="describes the marker scanner; not agent-left unfinished work"
# scanner, same COMPUTE/bus seam. Generated by node_generation_consumer against the
# live model and corpus-accepted on the first attempt.
check-todo-fixme-marker-compute = "omnibase_core.validation.todo_marker.runtime_todo_marker:main"
# OMN-13509 (G2, SEA-dogfood): sibling pin-hygiene scanner (blocks off-dev-line
# omnibase-core/spi/compat git pins), same COMPUTE/bus seam. Generated by
# node_generation_consumer against the live model and corpus-accepted on the first
# attempt; git ancestry resolved at the EFFECT boundary. PR-time sibling of the
# deploy-time OMN-12977 guard.
check-pin-hygiene-compute = "omnibase_core.validation.pin_hygiene.runtime_pin_hygiene:main"
# OMN-13480 (G2 residual, SEA-dogfood): hardcoded localhost/loopback URL scanner
# (blocks http(s)://localhost / http(s)://127.0.0.1 literals — the loopback
# endpoints url-authority's public-https-literal rule excludes), same COMPUTE/bus
# seam. Generated by node_generation_consumer against the live model and
# corpus-accepted.
check-localhost-url-compute = "omnibase_core.validation.localhost_url.runtime_localhost_url:main"
# OMN-13294 (G2, SEA-dogfood): hardcoded onex.* topic-string scanner (blocks
# pasted onex.<a>.<b>.<c> topic literals that should be contract-declared), same
# COMPUTE/bus seam. Generated by node_generation_consumer against the live model
# and corpus-accepted on the first attempt.
check-hardcoded-topic-compute = "omnibase_core.validation.hardcoded_topic.runtime_hardcoded_topic:main"
# OMN-13569: doc-content COMPUTE validator (blocks local-environment traces +
# Linear ticket references in documentation), same COMPUTE/bus seam. Generated by
# node_generation_consumer against the live model and corpus-accepted on attempt 1.
# NOT yet wired as a gate — that is OMN-13572 (deferred).
check-doc-content-scan-compute = "omnibase_core.validation.doc_content_scan.runtime_doc_content_scan:main"
onex-validate-topics = "omnibase_core.validation.scripts.validate_topic_names:main"
validate-string-versions = "omnibase_core.validation.scripts.validate_string_versions:main"
onex-validate-links = "omnibase_core.scripts.validate_markdown_links:main"
onex-demo-path-topic-gate = "omnibase_core.validation.validator_demo_path_topic_coherence:main"
# OMN-13663: projection exposure⇄column drift validator. Reconciles every
# projection node contract.yaml's projection_api.exposures against the
# materialized columns of the table/view each reads from (extracted from the
# node's migration DDL). Existence drift fails the build; identity/tier/cost
# columns omitted from every exposure warn (the cost_tier_name class of bug).
check-projection-exposure-drift = "omnibase_core.validators.projection_exposure_drift:main"
# OMN-13735: FSM YAML-vs-handler drift validator. Reconciles every reducer
# contract.yaml's state_machine.transitions (filtered by fsm_handler_binding.state_filter)
# against the handler's VALID_TRANSITIONS and GUARD_CONDITIONS Python symbols via AST.
# Fails on any (from_state, trigger)->to_state or guard divergence; zero allowlist entries.
check-fsm-handler-drift = "omnibase_core.validators.fsm_handler_drift:main"

[project.entry-points."onex.backends"]
event_bus_inmemory = "omnibase_core.event_bus.event_bus_inmemory:EventBusInmemory"
state_disk = "omnibase_core.services.state.service_state_disk:ServiceStateDisk"

[project.entry-points."onex.cli"]
# Core CLI commands are registered directly via [project.scripts]
# This group is for extensions from other packages
gate = "omnibase_core.cli.cli_gate:gate"

[project.entry-points."onex.doctor"]
docker = "omnibase_core.doctor.checks.check_docker:CheckDocker"
kafka = "omnibase_core.doctor.checks.check_kafka:CheckKafka"
postgres = "omnibase_core.doctor.checks.check_postgres:CheckPostgres"
linear = "omnibase_core.doctor.checks.check_linear:CheckLinear"
repos_synced = "omnibase_core.doctor.checks.check_repos_synced:CheckReposSynced"
stale_worktrees = "omnibase_core.doctor.checks.check_stale_worktrees:CheckStaleWorktrees"
env_vars = "omnibase_core.doctor.checks.check_env_vars:CheckEnvVars"
python_version = "omnibase_core.doctor.checks.check_python_version:CheckPythonVersion"
js_runtime = "omnibase_core.doctor.checks.check_js_runtime:CheckJsRuntime"

[project.entry-points."onex.nodes"]
node_compliance_evidence_effect = "omnibase_core.nodes.node_compliance_evidence_effect"
node_compliance_orchestrator = "omnibase_core.nodes.node_compliance_orchestrator"
node_compliance_report_reducer = "omnibase_core.nodes.node_compliance_report_reducer"
node_compliance_scan_compute = "omnibase_core.nodes.node_compliance_scan_compute"
node_backend_secret_discipline_compute = "omnibase_core.nodes.node_backend_secret_discipline_compute" # pragma: allowlist secret
node_contract_resolve_compute = "omnibase_core.nodes.node_contract_resolve_compute"
node_contract_verify_replay_compute = "omnibase_core.nodes.node_contract_verify_replay_compute"

[project.optional-dependencies]
spi = ["omnibase-spi>=0.20.2"]
cli = ["psutil>=7.2.1"]
kafka = ["aiokafka>=0.12.0,<1.0.0", "confluent-kafka>=2.12.0,<3.0.0"]
cache = ["redis>=5.0.0,<9.0.0"]
metrics = ["prometheus-client>=0.21.0,<1.0.0"]
sql-parser = ["sqlglot>=26.0.0,<31.0.0"]
full = ["omnibase-spi>=0.20.2", "psutil>=7.2.1", "aiokafka>=0.12.0,<1.0.0", "confluent-kafka>=2.12.0,<3.0.0", "redis>=5.0.0,<9.0.0", "prometheus-client>=0.21.0,<1.0.0", "sqlglot>=26.0.0,<31.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.3.0",
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "ruff>=0.14.13,<0.16.0",
    "types-pyyaml>=6.0.12.20250822",
    "pre-commit>=4.5.1",
    "types-requests>=2.32.4.20250913",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-split>=0.10.0",
    "pytest-timeout>=2.4.0",
    "pytest-rerunfailures>=16.1",
    "pytest-testmon>=2.2.0",
    "interrogate>=1.7.0",
    # OMN-14216: intra-core dependency-layering oracle (import-linter + grimp)
    "import-linter>=2.13,<3.0.0",
    "hypothesis>=6.150",
    "psutil>=7.2.1",
    "confluent-kafka>=2.12.0,<3.0.0",
    "prometheus-client>=0.21.0,<1.0.0",
    "types-psutil>=7.2.1.20260116",
    "sqlglot>=26.0.0,<31.0.0",
    # Centralized governance hooks (OMN-5135)
    "onex-change-control>=0.1.0",
]

[tool.uv.sources]
onex-change-control = { git = "https://github.com/OmniNode-ai/onex_change_control.git", rev = "41054810a25db826a4c649f491a2d980bffb0c17" }  # pragma: allowlist secret  # OMN-13762: pinned to immutable SHA (was branch="main"; v0.1.0, last OCC version without omnibase-core circular dep)  # onex-allow-pin-hygiene OMN-13762

[tool.hatch.build.targets.wheel]
packages = ["src/omnibase_core"]

[tool.hatch.build]
# Include YAML contract files in the wheel for PyPI installs (OMN-6484)
# and the generated feature-flag catalog JSON (OMN-7776).
artifacts = [
    "src/omnibase_core/**/*.yaml",
    "src/omnibase_core/feature_flags/feature_flag_catalog.json",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    "**/archived/**",
    "**/archive/**",
    "**/__pycache__/**",
    "**/site-packages/**",
    "tests/fixtures/validation/exports/syntax_error.py",  # Intentionally invalid for testing
]

[tool.ruff.format]
# Use black-compatible formatting (ruff format is a drop-in replacement for black)
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PD", "PGH", "PL", "TRY", "NPY", "RUF"]
ignore = [
    "S101",      # Allow assert statements in tests
    "E501",      # Line too long (technical debt - will fix incrementally)
    "E402",      # Module level import not at top (technical debt)
    "TC001",     # Type checking imports (technical debt)
    "TC003",     # Type checking imports (technical debt)
    "TC004",     # Type checking imports in __all__ re-exports (technical debt)
    "TC006",     # Quotes in typing.cast() (technical debt - runtime micro-optimization)
    "UP046",     # Use PEP 695 type parameters instead of Generic[T] (technical debt - requires Python 3.12+)
    "PLR0911",   # Too many returns (technical debt)
    "PLR0912",   # Too many branches (technical debt)
    "PLR0913",   # Too many arguments (technical debt)
    "PLR0915",   # Too many statements (technical debt)
    "PLR2004",   # Magic values (technical debt)
    "FBT001",    # Boolean positional args (technical debt)
    "FBT002",    # Boolean default args (technical debt)
    "EM101",     # Exception string literal (technical debt)
    "EM102",     # Exception f-string literal (technical debt)
    "TRY003",    # Long exception messages (technical debt)
    "TRY004",    # Exception type preference (technical debt)
    "TRY300",    # Consider else block (technical debt)
    "DTZ005",    # datetime.now() without tz (technical debt)
    "B008",      # Function call in defaults (technical debt)
    "ARG003",    # Unused class method argument (technical debt)
    "ERA001",    # Commented out code (technical debt)
    "SIM102",    # Nested if statements (technical debt)
    "B007",      # Unused loop variable (technical debt)
    "PT018",     # Assertion breakdown (technical debt)
    "EXE001",    # Shebang without executable (technical debt)
    "B904",      # raise from (will fix incrementally)
    "RET505",    # Unnecessary elif (will fix incrementally)
    "COM812",    # Trailing commas (will fix incrementally)
    "C901",      # Function complexity (architectural - not fixable easily)
    "E721",      # Type comparisons (technical debt)
    "N806",      # Variable naming (technical debt)
    "TRY203",    # Redundant exception handler (technical debt)
    "RUF003",    # Comment formatting (technical debt)
    "SIM117",    # Nested with statements (technical debt)
    "SIM105",    # contextlib.suppress (technical debt)
    "PTH123",    # Path.open() (technical debt)
    "PT017",     # pytest.raises in except (technical debt)
    "F841",      # Unused variable (technical debt)
    "ARG002",    # Unused method argument (technical debt)
    # T201 removed — print statements enforced via ruff + per-file-ignores [OMN-5080]
    "FBT003",    # Boolean positional value in call (technical debt)
    "N802",      # Invalid function name (technical debt)
    "S603",      # Subprocess without shell (technical debt)
    "S607",      # Start process with partial path (technical debt)
    "PT011",     # Pytest raises too broad (technical debt)
    "SLF001",    # Private member access (technical debt)
    "DTZ001",    # Call datetime without tzinfo (technical debt)
    "ARG001",    # Unused function argument (technical debt)
    "G004",      # Logging f-string (technical debt)
    "INP001",    # Implicit namespace package (technical debt)
    "TRY301",    # Raise within try (technical debt)
    "RUF022",    # Unsorted dunder all (technical debt)
    "SIM103",    # Needless bool (technical debt)
    "S301",      # Suspicious pickle usage (technical debt)
    "B019",      # Cached instance method (technical debt)
    "PLW2901",   # Redefined loop name (technical debt)
    "B011",      # Assert false (technical debt)
    "PT015",     # Pytest assert always false (technical debt)
    "RUF005",    # Collection literal concatenation (technical debt)
    "S110",      # Try except pass (technical debt)
    "S112",      # Try except continue (technical debt)
    "SIM108",    # If else block instead of if exp (technical debt)
    "S311",      # Suspicious non-cryptographic random usage (technical debt)
    "S324",      # Hashlib insecure hash function (technical debt)
    "PLR1714",   # Repeated equality comparison (technical debt)
    "RUF012",    # Mutable class default (technical debt)
    "TRY401",    # Verbose log message (technical debt)
    "S105",      # Hardcoded password string (technical debt)
    "B017",      # Assert raises exception (technical debt)
    "A001",      # Builtin variable shadowing (technical debt)
    "PT012",     # Pytest raises with multiple statements (technical debt)
    "RET503",    # Implicit return (technical debt)
    "RET504",    # Unnecessary assign (technical debt)
    "SIM101",    # Duplicate isinstance call (technical debt)
    "SIM110",    # Reimplemented builtin (technical debt)
    "ARG005",    # Unused lambda argument (technical debt)
    "E711",      # None comparison (technical debt)
    "E722",      # Bare except (technical debt)
    "PLR1722",   # Sys exit alias (technical debt)
    "ISC001",    # Implicit string concatenation (conflicts with formatter)
    # Intentional patterns (not technical debt)
    "PLC0415",   # Import not at top-level (intentional lazy imports for circular dep breaking)
    "PLW0603",   # Global statement (intentional caching/lazy initialization pattern)
    "PLW1641",   # Missing __hash__ (Pydantic BaseModels are intentionally unhashable)
    "DTZ901",    # datetime.min without tz (test sentinel values)
    "S106",      # Hardcoded password (test fixtures)
    "S608",      # SQL injection false positive (Dockerfile templates, not SQL)
    # Pre-existing issues revealed after noqa cleanup (technical debt)
    "F821",      # Undefined name (test fixtures using non-existent classes)
    "B010",      # setattr with constant (intentional dynamic attribute setting)
    "B027",      # Empty method without abstract decorator (intentional hooks)
    "RUF006",    # Dangling task (async fire-and-forget pattern)
    "N818",      # Exception name without Error suffix (legacy naming)
    "S104",      # Possible binding to all interfaces (test/dev servers)
    "S107",      # Possible hardcoded password default (test fixtures)
    "S108",      # Probable insecure temp file (test fixtures)
    "PLR0402",   # Use from import (style preference)
    "F403",      # Star import (legacy patterns)
    "E712",      # Comparison to True/False (intentional in some contexts)
]

[tool.ruff.lint.per-file-ignores]
"tests/unit/validation/test_yaml_allowlist.py" = ["DTZ007"]  # Date format validation without timezone
# Circular dependency workarounds - see OMN-1261 for Dual-Import Pattern documentation
# These files require specific import orderings to break circular dependency chains
"src/omnibase_core/mixins/__init__.py" = ["I001"]  # Import order to avoid circular dependencies
"src/omnibase_core/infrastructure/node_base.py" = ["I001"]  # Import order to avoid circular dependencies
"src/omnibase_core/models/container/model_onex_container.py" = ["I001"]  # Dual-Import Pattern (OMN-1261)
# T201 per-file-ignores: intentional print() for CLI output, validation reports, and script output [OMN-5080]
"src/omnibase_core/runtime/harness/harness_cli.py" = ["T201"]  # OMN-13420: harness evidence packet to stdout
"src/omnibase_core/cli/substrate_gates/_base.py" = ["T201"]
"src/omnibase_core/cli/cli_spdx.py" = ["T201"]
"src/omnibase_core/mixins/mixin_cli_handler.py" = ["T201"]
"src/omnibase_core/models/container/model_enhanced_logger.py" = ["T201"]
"src/omnibase_core/models/metadata/model_example_string_reduction_improvements.py" = ["T201"]
"src/omnibase_core/services/service_validation_suite.py" = ["T201"]
"src/omnibase_core/validation/validator_architecture.py" = ["T201"]
"src/omnibase_core/validation/validator_banned_compose_vars.py" = ["T201"]
"src/omnibase_core/validation/validator_requirements_consumer.py" = ["T201"]
# OMN-13574: CLI runner for the Model-B rollup-coverage verifier prints findings.
"src/omnibase_core/validation/validator_rollup_coverage.py" = ["T201"]
"src/omnibase_core/validation/validator_base.py" = ["T201"]
"src/omnibase_core/validation/validator_circular_import.py" = ["T201"]
"src/omnibase_core/validation/validator_cli.py" = ["T201"]
"src/omnibase_core/validation/validator_receipt_gate_cli.py" = ["T201"]
"src/omnibase_core/validation/validator_receipt_reprobe.py" = ["T201"]  # CLI output for re-probe verification (OMN-9789)
"src/omnibase_core/validation/validator_receipt_diff_consistency.py" = ["T201"]  # CLI output for the attestation diff-consistency gate (OMN-13927)
"scripts/analysis/co_change_dark_matter.py" = ["T201"]
"scripts/validation/validate_pr_receipts.py" = ["T201"]
"scripts/validation/validate_pr_deploy_required.py" = ["T201"]
"scripts/validation/validate_no_except_swallow.py" = ["T201"]
"scripts/validation/validate_no_none_guard_publish.py" = ["T201"]
"scripts/validation/validate_no_import_none_fallback.py" = ["T201"]
"scripts/validation/check_ai_slop.py" = ["T201", "BLE001"]
"scripts/validation/validate-check-names.py" = ["T201", "BLE001"]
"scripts/validation/validate-stubbed-functionality.py" = ["T201", "BLE001"]
"scripts/validation/validate-exception-handling.py" = ["T201", "BLE001"]
"scripts/check_dep_provenance.py" = ["T201"]  # CLI output for dep-provenance gate (OMN-13873/OMN-13877)
"scripts/ci/check_import_ratchet.py" = ["T201"]  # CLI output for import-layering growth-ratchet gate (OMN-14340)
"src/omnibase_core/validation/validator_contracts.py" = ["T201"]
"src/omnibase_core/validation/validator_routing_authority.py" = ["T201"]  # CLI output for routing-authority gate (OMN-13306)
"src/omnibase_core/validation/delegation/validator_delegation_profile.py" = ["T201"]  # CLI output for delegation-profile hook (OMN-13306)
"src/omnibase_core/validation/validator_local_paths.py" = ["T201"]
"src/omnibase_core/validation/validator_github_token_env_reads.py" = ["T201"]  # CLI output for github-token env-read gate (OMN-13310)
# OMN-13293: CLI runner for the local-paths COMPUTE validator prints findings.
"src/omnibase_core/validation/local_paths/runtime_local_paths.py" = ["T201"]
# OMN-13294: CLI runner for the private-IP COMPUTE validator prints findings.
"src/omnibase_core/validation/private_ip/runtime_private_ip.py" = ["T201"]
# OMN-13497: CLI runner for the no-faked-boundary COMPUTE validator prints findings.
"src/omnibase_core/validation/no_faked_boundary/runtime_no_faked_boundary.py" = ["T201"]
# OMN-13480: CLI runner for the unfinished-work-marker COMPUTE validator prints findings.  # onex-allow-todo-marker OMN-13480 reason="describes the marker scanner; not agent-left unfinished work"
"src/omnibase_core/validation/todo_marker/runtime_todo_marker.py" = ["T201"]
# OMN-13509: CLI runner for the pin-hygiene COMPUTE validator prints findings.
"src/omnibase_core/validation/pin_hygiene/runtime_pin_hygiene.py" = ["T201"]
# OMN-13480: CLI runner for the localhost-URL COMPUTE validator prints findings.
"src/omnibase_core/validation/localhost_url/runtime_localhost_url.py" = ["T201"]
# OMN-13294: CLI runner for the hardcoded-topic COMPUTE validator prints findings.
"src/omnibase_core/validation/hardcoded_topic/runtime_hardcoded_topic.py" = ["T201"]
# OMN-13569: CLI runner for the doc-content COMPUTE validator prints findings.
"src/omnibase_core/validation/doc_content_scan/runtime_doc_content_scan.py" = ["T201"]
"src/omnibase_core/validation/validator_transport_import.py" = ["T201"]  # CLI output for pre-commit hook violations (OMN-13283)
"src/omnibase_core/validation/validator_node_purity.py" = ["T201"]  # CLI output for pre-commit hook violations (OMN-13283)
"src/omnibase_core/validation/antipattern_checker.py" = ["T201"]  # CLI output for pre-commit hook violations (OMN-11923)
"src/omnibase_core/validation/validator_skill_backing_node.py" = ["T201"]
"src/omnibase_core/validation/validator_patterns.py" = ["T201"]
"src/omnibase_core/validation/validator_types.py" = ["T201"]
"src/omnibase_core/validation/validator_receipt_honesty.py" = ["T201"]  # CLI output for honesty gate scan results (OMN-12791)
"src/omnibase_core/validation/cross_repo/cli.py" = ["T201"]
"src/omnibase_core/validation/scripts/cross_platform_timeout.py" = ["T201"]
"src/omnibase_core/validation/scripts/timeout_utils.py" = ["T201"]
"src/omnibase_core/validation/scripts/validate_string_versions.py" = ["T201"]
"src/omnibase_core/validation/scripts/validate_topic_names.py" = ["T201"]
"src/omnibase_core/validation/validator_demo_path_topic_coherence.py" = ["T201"]  # CLI output for demo-path topic coherence gate (OMN-12777)
"src/omnibase_core/validation/validator_backend_secret_discipline.py" = ["T201"]  # CLI output for backend secret-ref discipline gate (OMN-13305)
"src/omnibase_core/scripts/validate_markdown_links.py" = ["T201"]
"scripts/pin_bump.py" = ["T201"]  # CLI output for publish-downstream-pin-bump workflow [OMN-9050]
"scripts/emit_ts_types.py" = ["T201"]  # CLI output for omnidash-v2 TS type generation
"scripts/validate_deterministic_skill_routing.py" = ["T201"]  # CLI output for CI gate report
"scripts/migrate_dod_receipts.py" = ["T201"]  # CLI output for legacy DoD receipt migration [OMN-9790]
"scripts/check_release_identity.py" = ["T201"]  # CLI output for release-identity gate report [OMN-13411]
"scripts/validation/validate_no_new_env_vars.py" = ["T201"]  # CLI output for pre-commit hook report (OMN-11186)
# Test files: print() used for debug output and test diagnostics — bulk removal deferred
"tests/**/*.py" = ["T201"]

[tool.mypy]
# Strict mode enables: warn_return_any, warn_unused_configs, disallow_untyped_defs,
# disallow_incomplete_defs, check_untyped_defs, disallow_untyped_decorators,
# no_implicit_optional, warn_redundant_casts, warn_unused_ignores, strict_equality, and more
strict = true
plugins = ["pydantic.mypy"]
python_version = "3.12"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

# Third-party libraries without type stubs
[[tool.mypy.overrides]]
module = "jsonpath_ng.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlglot.*"
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests that test individual components in isolation",
    "integration: Integration tests that test multiple components together",
    "slow: Tests that take a long time to run (>1s)",
    "smoke: Quick smoke tests for basic functionality",
    "performance: Performance and benchmark tests",
    "cache: Cache-related tests",
    "nodes: Node architecture tests",
    "validation: Validation framework tests",
    "flaky: Marks tests as flaky and allows reruns (from pytest-rerunfailures)",
    "timeout: Timeout for individual tests using pytest-timeout plugin (e.g., @pytest.mark.timeout(60))"
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
    "-n4",  # Limit parallel workers to prevent OOM (was: auto)
    "--timeout=60",  # Prevent hanging tests (60s per test)
    "--timeout-method=thread",  # Use thread-based timeout for better compatibility
    "--dist=loadgroup",  # Group tests by @pytest.mark.xdist_group for better control
    "--reruns=2",  # Auto-retry failed tests twice (handles flaky tests)
    "--reruns-delay=1",  # 1 second delay between reruns
]
filterwarnings = [
    # === Deprecation Warning Capture (OMN-199, Phase 7) ===
    # Display deprecation warnings during test runs so developers can address them
    # before v0.5.0 when these will become errors
    "default::DeprecationWarning",
    "default::PendingDeprecationWarning",
    # Suppress asyncio "Task was destroyed but it is pending!" warnings
    # These are expected during test cleanup when fixtures cancel pending tasks
    # The cleanup fixtures (event_loop_cleanup, cleanup_service_tasks) properly
    # cancel tasks, so these warnings are cosmetic and don't indicate real issues
    "ignore:.*Task was destroyed but it is pending.*:RuntimeWarning",
    # NOTE: "coroutine was never awaited" warnings are NOT suppressed
    # These indicate real bugs where async functions were called but never executed
    # If you encounter this warning, FIX the test by properly awaiting the coroutine
]
# Memory optimization notes:
# - Limited to 4 workers to prevent OOM on machines with 16GB RAM
# - Use --timeout to prevent hanging tests accumulating memory
# - Use --dist=loadscope to group tests by module (reduces import overhead)
# Test execution strategies:
#   Fast iteration: -n 2 --timeout=30
#   Full suite: -n 4 --timeout=60 (default)
#   CI/Large machines: -n 8 --timeout=120
#   Debug single test: -n 0 (disable xdist)
#
# Intelligent test selection with pytest-testmon:
#   Run only affected tests: uv run pytest --testmon
#   Reset testmon database: uv run pytest --testmon-noselect
#   Disable testmon: uv run pytest --testmon-off
#   Note: .testmondata file is gitignored and stores test dependencies

[tool.coverage.run]
source = ["src/omnibase_core"]
omit = [
    "*/tests/*",
    "*/archived/*",
    "*/archive/*",
    "*/__pycache__/*",
    "*/site-packages/*"
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod"
]
